--- a/public/_sketch_boilerplate_/index.html
+++ b/public/_sketch_boilerplate_/index.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>D3 Sketchbook Boilerplate</title>
+  <title>JS Sketchbook Boilerplate: Example Sketch</title>
 </head>
 
 <body>
-  <!-- Load application -->
+  <!-- Load sketch: load JamJS's requireJs, but reference the experiment's main.js to start your sketch -->
   <script data-main="main"
     src="/lib/require.js"></script>
 
 </body>
 </html>
+
