Adding Jasmine tests.  Adding documentation.

--- a/public/_sketch_boilerplate_/index.html
+++ b/public/_sketch_boilerplate_/index.html
@@ -13,6 +13,10 @@
   <script data-main="main"
     src="/lib/require.js"></script>
 
+  <div id="example-view-el">
+    <!-- Example DOM elements to be used by the example Backbone View instance -->
+  </div>
+
 </body>
 </html>
 
