Force view.  Word exclude list to avoid over-crowding with misc. connector words like 'and' or 'to' (or 'or')

--- a/public/meditations/index.html
+++ b/public/meditations/index.html
@@ -81,9 +81,7 @@ body {
     src="/lib/require.js"></script>
 
   <div class="row-fluid">
-
-    <div class="span4" id="author_force"></div>
-    <div class="span4" id="comment_force"></div>
+    <div id="force_view"
   </div>
 
 
