--- a/public/meditations/index.html
+++ b/public/meditations/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>Collegiate Meditations</title>
+  <title>Meditations</title>
 
   <link rel="stylesheet" href="/lib-user/bootstrap_232/css/bootstrap.min.css">
   <link rel="stylesheet" href="/lib-user/font-awesome/css/font-awesome.min.css">
