Adding shown nodes indicators to word list view

--- a/public/meditations/index.html
+++ b/public/meditations/index.html
@@ -66,8 +66,14 @@ body {
   padding-left: 15px;
 }
 
-#word_list_view li > span {
+#word_list_view li {
   cursor: pointer;
+  margin-top: 3px;
+}
+
+#word_list_view li > div.shown-nodes {
+  margin-top: -7px;
+  font-size: 8px;
 }
 
 #num_mottos i.focus {
