Fixing bug where clicking on word list indicators did js error

--- a/public/meditations/index.html
+++ b/public/meditations/index.html
@@ -38,8 +38,11 @@ svg > g.nodes.locked > circle {
 }
 
 #word_list_view li {
-  cursor: pointer;
   margin-top: 3px;
+}
+
+#word_list_view li > div.word-text {
+  cursor: pointer;
 }
 
 #word_list_view li > div.shown-nodes {
