Tweaking require config for github pages

--- a/meditations/index.html
+++ b/meditations/index.html
@@ -7,8 +7,8 @@
 
   <title>Meditations</title>
 
-  <link rel="stylesheet" href="../lib-user/bootstrap_232/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../lib-user/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/sketchbook/lib-user/bootstrap_232/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/sketchbook/lib-user/font-awesome/css/font-awesome.min.css">
 
   <style type="text/css">
 
@@ -60,7 +60,7 @@ svg > g.nodes.locked > circle {
 <body style="background-color: #2E1139">
   <!-- Load sketch: load JamJS's requireJs, but reference the experiment's main.js to start your sketch -->
   <script data-main="main"
-    src="/meditations/lib/require.js"></script>
+    src="/sketchbook/lib/require.js"></script>
   <div class="container" style="display:none;">
     <div class="row-fluid" style="padding: 20px;">
       <div id="force_view" class="pull-left span4" style="height: 500px;"></div>
