Adding node halos

--- a/public/meditations/index.html
+++ b/public/meditations/index.html
@@ -29,11 +29,11 @@ circle.node.semihighlight {
   stroke-opacity: .75;
 }
 
-svg > g.nodes > circle {
+svg > g.nodes circle {
   cursor: pointer;
 }
 
-svg > g.nodes.locked > circle {
+svg > g.nodes.locked circle {
   cursor: default;
 }
 
