Fixing bg color

--- a/meditations/index.html
+++ b/meditations/index.html
@@ -57,7 +57,7 @@ svg > g.nodes.locked circle {
 
 </head>
 
-<body style="background-color: #2E1139">
+<body style="background-color: #242227">
   <!-- Load sketch: load JamJS's requireJs, but reference the experiment's main.js to start your sketch -->
   <script data-main="main"
     src="/sketchbook/lib/require.js"></script>
