--- a/public/oakland-mayor-summary/index.html
+++ b/public/oakland-mayor-summary/index.html
@@ -99,6 +99,9 @@ body {
     </p>
     <p>
       Fork this sketch and remix it on my <a href="https://github.com/dlopuch/sketchbook">Github</a>
+      <a href="https://twitter.com/floatrock" class="twitter-follow-button" data-show-count="false">Follow @floatrock</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
     </p>
   </div>
 
