--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@ ul > li {
     <a href="/meditations/">Meditations</a><br>
     An experiment in adding interactivity and build-up to the standard D3 force layout.  Why does every D3 force layout
     example show a fixed number of nodes?  A network should be revealed as it explored, and here we meditate on phrases
-    as our network of hopes and ideals is revealed.
+    as our interconnected network of hopes and ideals is revealed.
   </li>
   <li>
     <a href="/oakland-mayor-summary">2014 Oakland Mayoral Campaign Financial Summaries</a><br>
-    A hackathon project from Oakland Data Day on how to visualize campaign finance public records, in the context of
-    the 2014 Oakland Mayoral race.
+    A hackathon project from Oakland Data Day on visualizing campaign finance public records to englighten and
+    provoke questions.
   </li>
 </ul>
 
