--- a/public/oakland-mayor-summary/index.html
+++ b/public/oakland-mayor-summary/index.html
@@ -5,7 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>Oakland Mayor Contributions </title>
+  <meta property="og:title" content="2014 Oakland Mayoral Campaign Financial Fingerprints" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://sketchbook.onafloatingrock.com/oakland-mayor-summary" />
+  <meta property="og:image" content="http://sketchbook.onafloatingrock.com/oakland-mayor-summary/og.png" />
+
+  <title>2014 Oakland Mayoral Campaign Financial Fingerprints</title>
 
   <style type="text/css">
 body {
