--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,8 @@ ul > li {
   </li>
 </ul>
 
-<a href="https://twitter.com/floatrock" class="twitter-follow-button" data-show-count="false">Follow @floatrock</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
+<a href="https://twitter.com/intent/tweet?screen_name=floatrock" class="twitter-mention-button" data-related="floatrock">Message me @floatrock</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 <h1>fork me on github</h1>
 <p> See something you like or want to look at the source?  <a href="https://github.com/dlopuch/sketchbook">Fork it on github</a>
