--- a/public/oakland-mayor-summary/index.html
+++ b/public/oakland-mayor-summary/index.html
@@ -116,7 +116,7 @@ body {
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46435735-1', 'sketchbook.onafloatingrock.com');
+  ga('create', 'UA-48401965-1', 'onafloatingrock.com');
   ga('send', 'pageview');
 
 </script>
