Copy.  Adding additional tracking for oakland components -- what is working there?

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@ ul > li {
   </li>
   <li>
     <a href="/oakland-mayor-summary">2014 Oakland Mayoral Campaign Financial Summaries</a><br>
-    A hackathon project from Oakland Data Day on visualizing campaign finance public records to englighten and
-    provoke questions.
+    A hackathon project from Oakland Data Day on visualizing campaign finance public records to provide an empirical,
+    data driven alternative perspective on campaigns' structure, priorities, and promises.
   </li>
 </ul>
 
