--- a/public/oakland-mayor-summary/index.html
+++ b/public/oakland-mayor-summary/index.html
@@ -50,13 +50,23 @@ body {
     <h1 style="margin-bottom: 0">Oakland Mayoral Campaign Breakdowns:</h1>
     <h2 style="margin-top: 0">Cash Raised, Cash Spent, and Warchests, 1/1/2013-12/31/2013</h2>
     <p>
-      How can we bring greater transparency and public engagement to the flow of money in public elections?
-      In this hackathon project, we visualize the financial summaries of the 2014 mayoral campaigns for the City of
-      Oakland.  By creating a "financial fingerprint" of each campaign, we hope to enlighten readers on the structure of
-      a mayoral campaign and promote questions about campaigns' operational strategies.  For example, which campaigns
-      rely more on loans and debt (and to what degree)?  Who has received more non-monetary gifts?  How might these
-      impact the way a campaign is run or a candidate's focus?
+      How might you run a mayoral campaign differently if more of your funds came from loans and debt instead of
+      straight contributions?  Have you <i>considered</i> that different funding sources may affect a campaign's focus
+      and interests? Such information is available in public record filings and may offer a more data-driven
+      perspective on a campaign's priorities and promises than the usual
+      <a href="http://en.wikipedia.org/wiki/Stump_speech_(politics)">stump speech</a> or talking points, but it is often
+      too opaque or too technical to be consumed by the average citizen.
     </p>
+    <p>
+      In this hackathon project, we visualize the financial summaries of the 2014 mayoral campaigns for the city of
+      Oakland, CA. We hope these "financial fingerprints" make technical campaign finance details more consumable.
+      With greater accessibility, we hope to promote questions about campaigns' strategies.   Who has
+      received more non-monetary gifts?  To what extend might these impact a campaign's operations? Might they reflect a
+      candidate's political connections, or are they even relevant?  What other questions can public data help answer?
+      <a href="https://twitter.com/intent/tweet?button_hashtag=OpenData" class="twitter-hashtag-button" data-related="floatrock" data-url="http://sketchbook.onafloatingrock.com/oakland-mayor-summary">Tweet #OpenData</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </p>
+    <h2>Financial Fingerprints</h2>
     <p>
       A campaign's
       <span class="highlight sum"  data-highlight="Cash On Hand">cash balance</span> is the sum of all
@@ -97,8 +107,8 @@ body {
     <p>
       This summary visualization was developed with the <a href="https://github.com/openoakland/opendisclosure">OpenDisclosure</a> group
       at the <a href="http://openoakland.org/oakland-data-day/">Oakland Data Day hackathon</a>, organized by
-      <a href="http://openoakland.org/">OpenOakland.org</a>.  Many thanks to the group's knowledge and expertise on how
-      to dive through our public records.  Go support them, your local
+      <a href="http://openoakland.org/">OpenOakland.org</a>.  Many thanks to the group's knowledge and expertise on
+      navigating public records.  Go support them, your local
       <a href="http://brigade.codeforamerica.org/">Code for America Brigade</a>, or support your own local government
       through civic technology development.
     </p>
