More copy tweaks

--- a/public/oakland-mayor-summary/index.html
+++ b/public/oakland-mayor-summary/index.html
@@ -51,17 +51,17 @@ body {
     <h2 style="margin-top: 0">Cash Raised, Cash Spent, and Warchests, 1/1/2013-12/31/2013</h2>
     <p>
       How might you run a mayoral campaign differently if more of your funds came from loans and debt instead of
-      straight contributions?  Have you <i>considered</i> that different funding sources may affect a campaign's focus
+      straight contributions?  Have you considered that different funding sources may affect a campaign's focus
       and interests? Such information is available in public record filings and may offer a more data-driven
       perspective on a campaign's priorities and promises than the usual
-      <a href="http://en.wikipedia.org/wiki/Stump_speech_(politics)">stump speech</a> or talking points, but it is often
-      too opaque or too technical to be consumed by the average citizen.
+      <a href="http://en.wikipedia.org/wiki/Stump_speech_(politics)" target="_blank">stump speech</a>
+      or talking points, but these filings are often too opaque or too technical to be consumed by the average citizen.
     </p>
     <p>
       In this hackathon project, we visualize the financial summaries of the 2014 mayoral campaigns for the city of
       Oakland, CA. We hope these "financial fingerprints" make technical campaign finance details more consumable.
       With greater accessibility, we hope to promote questions about campaigns' strategies.   Who has
-      received more non-monetary gifts?  To what extend might these impact a campaign's operations? Might they reflect a
+      received more non-monetary gifts?  To what extent might these impact a campaign's operations? Might they reflect a
       candidate's political connections, or are they even relevant?  What other questions can public data help answer?
       <a href="https://twitter.com/intent/tweet?button_hashtag=OpenData" class="twitter-hashtag-button" data-related="floatrock" data-url="http://sketchbook.onafloatingrock.com/oakland-mayor-summary">Tweet #OpenData</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -74,11 +74,12 @@ body {
       <span class="highlight up"   data-highlight="Loans Received">loans</span>, minus
       <span class="highlight down" data-highlight="Expenditures">expenditures</span>*.
       Campaigns can additionally accrue
-      <span class="highlight down" data-highlight="Unpaid Bills">unpaid expenses</span>,
+      <span class="highlight down" data-highlight="Unpaid Bills">unpaid expenses</span> (unpaid bills),
       although these liabilities are not counted in the cash balance.  Finally, campaigns are required to post the value of
-      <span class="highlight up"   data-highlight="Non-monetary Contributions">non-monetary contributions</span>, such as gifts and donations.  Together these factors sum to the
-      <span class="highlight sum"  data-highlight="Effective Balance">effective balance</span>
-      of a campaign.
+      <span class="highlight up"   data-highlight="Non-monetary Contributions">non-monetary contributions</span>,
+      such as gifts and donations.  Together these factors sum to the
+      <span class="highlight sum"  data-highlight="Campaign Value">campaign value</span>,
+      a way of measuring the campaign's total cash and non-monetary balance.
     </p>
 
     <p style="font-size:smaller;">
