Adding slider to control emission of author nodes that get displayed

--- a/public/fireflies/index.html
+++ b/public/fireflies/index.html
@@ -12,6 +12,9 @@
 
   <title>Fireflies: A Dance of Discourse</title>
 
+
+  <link rel="stylesheet" href="/css/jquery-ui/jquery-ui-1.10.4.custom.min.css"/>
+
   <style type="text/css">
 
 circle.node {
@@ -70,6 +73,9 @@ body {
 
   <div style="width: 100%;">
     <div id="fireflies" >
+      <div id="timeline" style="width: 75%">
+        <div id="timeline_slider"></div>
+      </div>
       <div id="force_view"></div>
     </div>
   </div>
