Adding play/pause for slider

--- a/public/fireflies/index.html
+++ b/public/fireflies/index.html
@@ -75,6 +75,7 @@ body {
     <div id="fireflies" >
       <div id="timeline" style="width: 75%">
         <div id="timeline_slider"></div>
+        <div><a href="#" class="play">Play</a> | <a href="#" class="pause">Pause</a></div>
       </div>
       <div id="force_view"></div>
     </div>
