Linking home screen to fireflies sketch

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,11 @@ ul > li {
     A hackathon project from Oakland Data Day on visualizing campaign finance public records to provide an empirical,
     data driven alternative perspective on campaigns' structure, priorities, and promises.
   </li>
+  <li>
+    <a href="/fireflies">Fireflies: A Dance of Discourse</a><br>
+    An experiment in using a dynamic D3 force layout to show participants popping into and out of a conversation, like
+    fireflies flashing signals at each other.
+  </li>
 </ul>
 
 <a href="https://twitter.com/intent/tweet?screen_name=floatrock" class="twitter-mention-button" data-related="floatrock">Message me @floatrock</a>
