--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@ ul > li {
   </li>
   <li>
     <a href="/fireflies">Fireflies: A Dance of Discourse</a><br>
-    An experiment in using a dynamic D3 force layout to show participants popping into and out of a conversation, like
-    fireflies flashing signals at each other.
+    An experiment in using a dynamic D3 force layout to show the dynamics of participants popping into and out of a
+    conversation, like fireflies flashing at each other from the dark.
   </li>
 </ul>
 
