--- a/onafloatingrock_com/index.html
+++ b/onafloatingrock_com/index.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>on a floating rock</title>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <style type="text/css">
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -47,12 +48,27 @@ footer a:first-child {
 
     <footer>
       dan lopuch
-      <a href="http://sketchbook.onafloatingrock.com" target="_blank">sketchbook</a>
-      <a href="https://github.com/dlopuch" target="_blank"><i class="fa fa-github"></i></a>
-      <a href="http://www.linkedin.com/pub/daniel-lopuch/7/444/45a" target="_blank"><i class="fa fa-linkedin"></i></a>
-      <a href="https://twitter.com/floatrock" target="_blank"><i class="fa fa-twitter"></i>@floatrock</a>
-      <a href="https://www.datahero.com" target="_blank">work</a>
+      <a data-link="sketchbook" href="http://sketchbook.onafloatingrock.com" target="_blank">sketchbook</a>
+      <a data-link="github"     href="https://github.com/dlopuch" target="_blank"><i class="fa fa-github"></i></a>
+      <a data-link="linkedin"   href="http://www.linkedin.com/pub/daniel-lopuch/7/444/45a" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a data-link="twitter"    href="https://twitter.com/floatrock" target="_blank"><i class="fa fa-twitter"></i>@floatrock</a>
+      <a data-link="work"       href="https://www.datahero.com" target="_blank">work</a>
     </footer>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48401965-2', 'onafloatingrock.com');
+  ga('send', 'pageview');
+
+  $('a').click(function(e) {
+    window.ga('send', 'event', 'www', 'click link', $(e.currentTarget).attr('data-link') || '[ no link label ]');
+  });
+
+</script>
 
 </body>
 </html>
